--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -281,7 +281,7 @@ prosecution ,/n./@迫害;
 prospective ,/adj./@未来的;
 protagonist ,/n./@主角;,/n./@主人公;,/n./@主要参与者;
 provisional ,/adj./@臨時的;
-provocative ,/adj./@刺激的;
+provocative ,/adj./@挑衅的;,/adj./@煽动的;,/adj./@挑逗性的;,/adj./@撩人的;,/adj./@引起争议的;,/adj./@启发性的;
 punctuation ,/n./@標點;,/n./@標點符號;
 radioactive ,/adj./@放射性的;
 realization ,/n./@实现;
@@ -330,6 +330,7 @@ substandard ,/adj./@不合格的;,/adj./@次等的;
 substantial ,/adj./@可觀的;
 subtraction ,/n./@减;
 superficial ,/adj./@表面的;,/adj./@膚淺的;
+superiority ,/n./@优越;,/n./@优势;,/n./@优越感;,/n./@优越性;
 supervision ,/n./@監督;
 suppression ,/n./@鎮壓;,/n./@壓制;
 sustainable ,/adj./@可持续的;
@@ -347,6 +348,7 @@ theoretical ,/adj./@理論的;
 thermometer ,/n./@溫度計;
 thunderbolt ,/n./@霹靂;,/n./@雷電;
 timemachine ,/n./@时光机;
+topographic ,/adj./@地形的;
 traditional ,/adj./@传统的;
 transaction ,/n./@交易;,/n./@事務;,/n./@辦理;,/n./@學報;
 translation ,/n./@翻译;,/n./@译文;
