--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -40,6 +40,7 @@ confidential ,/adj./@機密的;
 confirmation ,/n./@确认;
 conglomerate ,/n./@礫岩;,/n./@企業集團;,/n./@聚合物;
 congratulate ,/v./@祝贺;
+congregation ,/n./@聚集;,/n./@会众;
 conscription ,/n./@徵兵;
 consequently ,/adv./@因此;
 conservation ,/n./@保护;,/n./@保护区;
@@ -149,6 +150,7 @@ presentation ,/n./@展示;,/n./@提供;,/n./@表演;
 professional ,/adj./@专业的;,/adj./@职业的;
 proportional ,/adj./@成比例的;
 prostitution ,/n./@賣淫;
+protuberance ,/n./@隆起;,/n./@隆起物;,/n./@凸出物;,/n./@突出物;
 purification ,/n./@净化;,/n./@提純;
 questionable ,/adj./@可疑的;
 recognizable ,/adj./@可辨認的;,/adj./@可認出的;,/adj./@可承認的;
@@ -169,6 +171,7 @@ sophisticate ,/v./@复杂化;
 sporadically ,/adv./@零星地;,/adv./@偶發的;
 subscription ,/n./@订阅;
 substitution ,/n./@代替;,/n./@置换;
+subterranean ,/adj./@地下的;,/adj./@秘密的;
 superstition ,/n./@迷信;
 surprisingly ,/adv./@令人惊讶的;
 surroundings ,/n./@周遭;
