--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -97,6 +97,7 @@ subordination ,/n./@从属;,/n./@顺从;
 superannuated ,/adj./@過時的;,/adj./@老朽的;
 supplementary ,/adj./@增补的;
 temperamental ,/adj./@喜怒无常的;,/adj./@性情的;
+topographical ,/adj./@地形的;
 transactional ,/adj./@交易的;,/adj./@事務性的;
 transnational ,/adj./@跨国的;
 uncomfortable ,/adj./@不舒服的;
