--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -761,6 +761,7 @@ rage ,/v./@发怒;,/n./@激烈;,/n./@盛怒;
 raid ,/n.//v./@劫掠;,/v./@袭击;
 rail ,/n./@鐵軌;,/n./@栏杆;,/n./@横杆;,/n./@扶手;
 rain ,/v./@下雨;,/n./@雨;
+ramp ,/n./@坡道;,/n./@升降台;,/n./@跳板;,/n./@匝道;
 rank ,/n./@等級;,/n./@隊列;
 rape ,/v./@強奸;
 rare ,/adj./@稀有的;
