--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -125,6 +125,7 @@ barren ,/adj./@不育的;,/adj./@貧瘠的;
 barter ,/n./@易貨貿易;
 basalt ,/n./@玄武岩;
 basket ,/n./@籃;
+batter ,/vt./@重击;,/vt./@殴打;,/vi./@猛击;
 battle ,/n./@戰爭;
 bawdry ,/n./@猥褻;,/n./@賣淫;
 bazaar ,/n./@集市;
@@ -219,6 +220,7 @@ casual ,/adj./@隨便的;
 cattle ,/n./@牛;
 caveat ,/n./@警告;,/n./@告誡;
 cavern ,/n./@洞穴;,/v./@挖空;
+cavity ,/n./@洞穴;,/n./@腔;,/n./@龋洞;,/n./@孔;
 celery ,/n./@芹菜;
 cement ,/n./@水泥;
 censor ,/v./@審查;,/v./@檢查;
@@ -422,6 +424,7 @@ emblem ,/n./@象征;,/n./@标志;,/n./@徽章;,/n./@标记;
 emerge ,/v./@出現;
 empire ,/n./@帝國;
 employ ,/v./@雇用;
+encase ,/vt./@包住;,/vt./@围住;
 encore ,/n./@再唱;,/n./@加演;
 endian ,/n./@字节序;
 endive ,/n./@苣荬菜;,/n./@菊苣;
@@ -1120,7 +1123,7 @@ second ,/adj./@第二的;
 secret ,/n./@秘密;
 secure ,/adj./@安全的;
 sedate ,/adj./@安靜的;
-seduce ,/v./@誘惑;
+seduce ,/v./@誘惑;,/vt./@引诱;,/vt./@诱奸;
 seemly ,/adj./@適當的;
 seesaw ,/n./@蹺蹺板;
 seldom ,/adv./@不常;,/adv./@難得;
@@ -1254,7 +1257,7 @@ studio ,/n./@工作室;
 stupid ,/adj./@笨的;
 sturdy ,/adj./@堅定的;
 stymie ,/v./@妨礙;,/v./@阻撓;
-subdue ,/v./@戰勝;,/v./@征服;
+subdue ,/v./@戰勝;,/v./@征服;,/vt./@制服;,/vt./@镇压;,/vt./@克制;
 submit ,/v./@遞交;
 subtle ,/adj./@微妙的;
 suburb ,/n./@郊區;
@@ -1376,8 +1379,8 @@ urbane ,/adj./@文雅的;,/adj./@有禮貌的;,/adj./@都市化的;
 urgent ,/adj./@緊迫的;,/adj./@緊急的;
 useful ,/n.//adj./@有用的;
 utmost ,/adj./@極度的;,/n./@極限;
-utopia ,/n./@烏托邦;
 Utopia ,/n./@烏托邦;
+utopia ,/n./@烏托邦;
 vacant ,/adj./@空的;,/adj./@空缺的;,/adj./@未佔用的;
 vacate ,/vt./@腾出;,/vt./@辞去;
 vacuum ,/n./@眞空;
@@ -1436,4 +1439,5 @@ writer ,/n./@作者;,/n./@作家;
 yatter ,/v./@閑扯;,/v./@瞎聊;
 yellow ,/n./@黃色;,/adj./@黃色的;
 yogurt ,/n./@酸奶;
+zealot ,/n./@狂热分子;
 zombie ,/n./@僵屍;,/n./@行屍走肉;
