--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -109,7 +109,7 @@ baloney ,/n./@胡話;,/n./@瞎扯;
 baptise ,/v./@施洗;,/v./@洗禮;,/v./@洗滌;
 baptize ,/v./@施洗;,/v./@命名;
 bargain ,/v./@討價還價;
-barrack ,/n./@兵營;,/n./@營房;,/v./@駐兵;,/v./@住入;
+barrack ,/n./@兵營;,/n./@營房;,/v./@駐兵;,/v./@住入;,/vt./@起哄;,/vt./@喝倒彩;
 barrier ,/n./@障礙;,/n./@壁壘;
 bastard ,/n./@私生子;
 battery ,/n./@電池;
@@ -206,8 +206,8 @@ charter ,/n./@憲章;,/n./@特許證;
 cherish ,/v./@珍視;
 chicken ,/n./@小鷄;
 chimney ,/n./@煙囪;
-chinese ,/n./@漢語;
 Chinese ,/n./@漢語;
+chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;
 chuckle ,/v./@輕笑;
@@ -317,7 +317,7 @@ current ,/adj./@當今;
 curtail ,/n./@削減;,/n./@剝奪;
 curtain ,/n./@窗簾;,/n./@幕布;
 cushion ,/n./@墊子;,/n./@靠墊;
-custody ,/v./@保管;,/v./@監護;
+custody ,/v./@保管;,/v./@監護;,/n./@监禁;,/n./@拘留;
 cutlery ,/n./@刀具;,/n./@餐具;,/n./@刀叉;,/n./@餐刀;
 cyanide ,/n./@氰化物;
 cyclone ,/n./@旋風;
@@ -1189,6 +1189,7 @@ trailer ,/n./@拖車;,/n./@預告片;,/n./@追蹤者;
 traitor ,/n./@叛徒;
 trample ,/v./@踐踏;
 tranche ,/n./@部分;
+treason ,/n./@叛国罪;,/n./@叛国;
 tremble ,/v./@顫抖;
 tribune ,/n./@保民官;
 tribute ,/n./@頌詞;,/n./@獻禮;,/n./@贡品;
@@ -1232,8 +1233,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vatican ,/n./@梵蒂岡;
+Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
@@ -1241,7 +1242,7 @@ verbose ,/adj./@冗長的;,/adj./@囉嗦的;
 verdict ,/n./@結論;,/n./@裁定;
 version ,/n./@版本;
 vertigo ,/n./@眩暈;
-vestige ,/n./@遺迹;
+vestige ,/n./@遺迹;,/n./@残迹;,/n./@丝毫;,/n./@残余;
 veteran ,/n./@老兵;
 vibrant ,/adj./@振動的;,/adj./@充滿生氣的;
 vibrate ,/v./@振動;
