--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -169,6 +169,7 @@ cemetery ,/n./@墓地;
 ceremony ,/n./@仪式;,/n./@典礼;,/n./@礼节;
 chairman ,/n./@主席;
 champion ,/n./@冠军;
+charcoal ,/n./@木炭;
 charming ,/adj./@迷人的;
 chastity ,/n./@贞洁;
 chemical ,/adj./@化学的;,/n./@化学药品;,/n./@化学制品;
@@ -456,7 +457,7 @@ fruitful ,/adj./@多产的;,/adj./@富有成效的;
 function ,/n./@作用;,/n./@功能;,/n./@函數;,/v./@运行;
 fuselage ,/n./@機身;
 futility ,/n./@無用;,/n./@徒勞;
-garrison ,/n./@要塞;,/v./@駐防;,/v./@守衛;
+garrison ,/n./@要塞;,/v./@駐防;,/v./@守衛;,/n./@卫戍部队;
 gauntlet ,/n./@长手套;,/n./@金属护手;
 generate ,/v./@产生;,/v./@發生;,/v./@生成;,/v./@生殖;
 generous ,/adj./@慷慨的;
@@ -742,6 +743,7 @@ passport ,/n./@护照;
 password ,/n./@密码;
 paternal ,/adj./@父親的;
 patience ,/n./@耐心;
+pavement ,/n./@人行道;,/n./@路面;,/n./@铺面;,/n./@铺路材料;
 peaceful ,/adj./@平靜的;,/adj./@和平的;
 peculiar ,/adj./@独特的;,/adj./@特殊的;,/adj./@奇怪的;,/adj./@罕見的;
 pedestal ,/n./@基架;,/n./@基座;,/n./@基础;,/n./@支持;
@@ -943,6 +945,7 @@ standard ,/n./@标准;,/adj./@标准的;
 standoff ,/n./@僵持;,/n./@均衡;
 starfish ,/n./@海星;
 starving ,/adj./@饥饿的;
+stealthy ,/adj./@秘密的;,/adj./@偷偷摸摸的;,/adj./@鬼鬼祟祟的;
 stickler ,/n./@頑固的人;,/n./@堅持的人;
 stimulus ,/n./@刺激;,/n./@刺激物;,/n./@激勵;
 straight ,/adj./@直的;,/adj./@直接的;
@@ -1029,6 +1032,7 @@ unfetter ,/v./@釋放;,/v./@解放;,/v./@掙脫;
 universe ,/n./@宇宙;
 unsavory ,/adj./@難喫的;,/adj./@沒有香味的;
 unsecure ,/adj./@不安全的;,/adj./@未加密的;
+uprising ,/n./@起义;
 urbanity ,/n./@雅致;,/n./@都市風格;,/n./@禮貌;
 vacation ,/n./@假期;
 validate ,/v./@驗證;,/v./@證實;,/v./@確認;,/v./@生效;
@@ -1045,6 +1049,7 @@ venerate ,/vt./@崇敬;,/vt./@敬重;
 verbatim ,/adj./@逐字的;,/adv./@逐字地;
 vertical ,/adj./@垂直的;,/adj./@竖的;
 vibrancy ,/n./@震動;,/n./@活力;
+vicinity ,/n./@附近;,/n./@邻近;
 vigilant ,/adj./@警惕的;,/adj./@警戒的;,/adj./@警醒的;
 vigorous ,/adj./@精力充沛的;
 violence ,/n./@暴力;
