--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -98,7 +98,7 @@ auxiliary ,/adj./@辅助的;,/n./@辅助者;,/n./@助动词;
 available ,/adj./@可用的;
 backslash ,/n./@反斜杠;
 barometer ,/n./@气压计;
-barricade ,/n./@路障;,/n./@街壘;
+barricade ,/n./@路障;,/n./@街壘;,/vt./@堵住;
 bartender ,/n./@酒保;
 beautiful ,/adj./@美丽的;
 beginning ,/n./@開始;,/n./@開端;,/n./@起點;
