--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -330,6 +330,7 @@ substandard
 substantial
 subtraction
 superficial
+superiority
 supervision
 suppression
 sustainable
@@ -347,6 +348,7 @@ theoretical
 thermometer
 thunderbolt
 timemachine
+topographic
 traditional
 transaction
 translation
