--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -40,6 +40,7 @@ confidential
 confirmation
 conglomerate
 congratulate
+congregation
 conscription
 consequently
 conservation
@@ -149,6 +150,7 @@ presentation
 professional
 proportional
 prostitution
+protuberance
 purification
 questionable
 recognizable
@@ -169,6 +171,7 @@ sophisticate
 sporadically
 subscription
 substitution
+subterranean
 superstition
 surprisingly
 surroundings
