--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -125,6 +125,7 @@ barren
 barter
 basalt
 basket
+batter
 battle
 bawdry
 bazaar
@@ -219,6 +220,7 @@ casual
 cattle
 caveat
 cavern
+cavity
 celery
 cement
 censor
@@ -422,6 +424,7 @@ emblem
 emerge
 empire
 employ
+encase
 encore
 endian
 endive
@@ -1376,8 +1379,8 @@ urbane
 urgent
 useful
 utmost
-utopia
 Utopia
+utopia
 vacant
 vacate
 vacuum
@@ -1436,4 +1439,5 @@ writer
 yatter
 yellow
 yogurt
+zealot
 zombie
