--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -206,8 +206,8 @@ charter
 cherish
 chicken
 chimney
-chinese
 Chinese
+chinese
 chowder
 chronic
 chuckle
@@ -1189,6 +1189,7 @@ trailer
 traitor
 trample
 tranche
+treason
 tremble
 tribune
 tribute
@@ -1232,8 +1233,8 @@ vampire
 variety
 various
 varsity
-Vatican
 vatican
+Vatican
 vehicle
 ventage
 venture
