--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -169,6 +169,7 @@ cemetery
 ceremony
 chairman
 champion
+charcoal
 charming
 chastity
 chemical
@@ -742,6 +743,7 @@ passport
 password
 paternal
 patience
+pavement
 peaceful
 peculiar
 pedestal
@@ -943,6 +945,7 @@ standard
 standoff
 starfish
 starving
+stealthy
 stickler
 stimulus
 straight
@@ -1029,6 +1032,7 @@ unfetter
 universe
 unsavory
 unsecure
+uprising
 urbanity
 vacation
 validate
@@ -1045,6 +1049,7 @@ venerate
 verbatim
 vertical
 vibrancy
+vicinity
 vigilant
 vigorous
 violence
