--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -158,7 +158,7 @@ brand ,/n./@品牌;,/n./@商標;,/v./@烙;
 brass ,/adj./@黃銅的;,/n./@黃銅;
 brave ,/adj./@勇敢的;
 bravo ,/n./@喝彩;
-brawl ,/n./@爭吵;,/n./@打架;
+brawl ,/n./@爭吵;,/n./@打架;,/vi./@斗殴;,/vi./@争吵;
 bread ,/n./@麵包;,/n./@生計;
 break ,/v./@破壞;
 breed ,/v./@繁殖;,/v./@飼養;,/n./@品種;
