--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1004,6 +1004,7 @@ throttle ,/v./@扼殺;,/v./@節流;,/v./@壓制;,/v./@窒息;,/v./@限速;,/n./@
 thruster ,/n./@推進器;
 Thursday ,/n./@星期四;
 tincture ,/n./@酊劑;
+tinnitus ,/n./@耳鸣;
 together ,/adv./@一起;
 tolerant ,/adj./@宽容的;,/adj./@有忍耐性的;
 tolerate ,/v./@容忍;,/v./@忍耐;
