--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -976,7 +976,7 @@ skill ,/n./@技巧;
 skirt ,/n./@裙子;
 skull ,/n./@顱骨;
 slain ,/v./@殺害@<slay的過去式>;
-slang ,/n./@俚語;
+slang ,/n./@俚語;,/vt./@谩骂;
 slant ,/v./@傾斜;,/n./@傾斜;
 slash ,/v./@猛砍;,/v./@鞭打;
 slate ,/n./@石板;,/n./@板巖;
@@ -1192,6 +1192,7 @@ trunk ,/n./@樹幹;
 trust ,/v./@相信;
 truth ,/n./@眞理;,/n./@事實;
 tryst ,/n./@幽會;,/n./@約會;
+tumor ,/n./@肿瘤;
 tutor ,/n./@導師;
 twerp ,/n./@蠢人;
 twice ,/adv./@兩次;
