--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -112,6 +112,7 @@ bargain ,/v./@討價還價;
 barrack ,/n./@兵營;,/n./@營房;,/v./@駐兵;,/v./@住入;,/vt./@起哄;,/vt./@喝倒彩;
 barrier ,/n./@障礙;,/n./@壁壘;
 bastard ,/n./@私生子;
+bathtub ,/n./@浴缸;,/n./@澡盆;
 battery ,/n./@電池;
 bearing ,/n./@軸承;
 because ,/conj./@因爲;
@@ -132,6 +133,7 @@ biology ,/n./@生物學;
 biscuit ,/n./@餅干;
 bizarre ,/adj./@奇異的;
 blanket ,/n./@地毯;
+blatant ,/adj./@明显的;,/adj./@公然的;,/adj./@露骨的;
 blemish ,/n./@瑕疵;
 blended ,/adj./@混合的;
 blister ,/n./@水泡;
