--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -438,6 +438,7 @@ immigrate ,/v./@移民;
 impartial ,/adj./@公正的;
 impatient ,/adj./@不耐烦的;
 impedient ,/n./@口吃;,/n./@障碍;,/n./@阻碍;,/n./@妨碍;
+impending ,/adj./@即将到来的;,/adj./@临近的;
 implement ,/v./实现;,/v./@实施;,/n./@工具;,/n./@手段;
 implicate ,/v./@涉及;
 important ,/adj./@重要的;
@@ -538,6 +539,7 @@ meteorite ,/n./@隕石;
 methodist ,/n./@衛理公會教徒;
 microwave ,/n./@微波;
 millipede ,/n./@千足虫;,/n./@马陆;
+miniature ,/n./@微缩模型;,/adj./@小型的;
 miserable ,/adj./@痛苦的;
 molecular ,/adj./@分子的;
 momentous ,/adj./@重要的;
