--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -112,6 +112,7 @@ bargain
 barrack
 barrier
 bastard
+bathtub
 battery
 bearing
 because
@@ -132,6 +133,7 @@ biology
 biscuit
 bizarre
 blanket
+blatant
 blemish
 blended
 blister
