--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -438,6 +438,7 @@ immigrate
 impartial
 impatient
 impedient
+impending
 implement
 implicate
 important
@@ -538,6 +539,7 @@ meteorite
 methodist
 microwave
 millipede
+miniature
 miserable
 molecular
 momentous
