--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1087,6 +1087,7 @@ solicit ,/v./@征求;,/v./@招攬;
 solvent ,/adj./@有償付能力的;,/adj./@有溶解力的;,/n./@溶劑;
 somehow ,/adv./@以某種方式;
 someone ,/n./@有人;,/n./@某人;
+souffle ,/n./@蛋奶酥;
 soybean ,/n./@大豆;,/n./@黃豆;
 sparkle ,/v./@發火花;,/v./@閃耀;
 sparrow ,/n./@麻雀;
@@ -1235,8 +1236,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-vatican ,/n./@梵蒂岡;
 Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
+vatican ,/n./@梵蒂岡;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
