--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -1087,6 +1087,7 @@ solicit
 solvent
 somehow
 someone
+souffle
 soybean
 sparkle
 sparrow
@@ -1235,8 +1236,8 @@ vampire
 variety
 various
 varsity
-vatican
 Vatican
+vatican
 vehicle
 ventage
 venture
