--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -361,6 +361,7 @@ invigorate ,/v./@激活;
 invincible ,/adj./@無敵的;
 invitation ,/n./@邀请;
 irrational ,/adj./@不合理的;
+irritating ,/adj./@令人恼怒的;
 jeopardize ,/v./@危及;
 journalism ,/n./@新聞業;
 journalist ,/n./@记者;
