--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -129,7 +129,7 @@ chop ,/v./@砍;,/v./@剁碎;,/n./@排骨;
 chum ,/n./@室友;,/n./@密友;
 cite ,/v./@引述;,/v./@引證;
 city ,/n./@城市;
-clam ,/n./@蛤;
+clam ,/n./@蛤;,/n./@蛤蜊;,/n./@蛤肉;
 clan ,/n./@宗族;,/n./@部落;,/n./@集團;
 clap ,/v./@鼓掌;
 clay ,/n./@粘土;
