--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -445,6 +445,7 @@ entire ,/adj./@整個的;,/adj./@全部的;
 entity ,/n./@實體;
 enzyme ,/n./@酶;
 equate ,/v./@等同;
+equine ,/adj./@马的;
 equity ,/n./@公平;
 eraser ,/n./@橡皮;,/n./@清除器;,/n./@擦除器;
 erotic ,/adj./@色情的;,/adj./@性愛的;
@@ -991,6 +992,7 @@ raisin ,/n./@葡萄乾;
 ramble ,/v./@漫步;,/n./@漫步;
 random ,/adj./@隨機的;,/adj./@任意的;
 ranger ,/n./@巡邏員;
+raptor ,/n./@肉食鸟;,/n./@猛禽;,/n./@猛龙;
 rarely ,/adj./@不經常的;
 rascal ,/n./@流氓;,/n./@惡棍;,/n./@無賴;
 rather ,/adv./@相當;,/adv./@寧願;,/adv./@更;
