--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -683,6 +683,7 @@ license ,/n./@許可;,/n./@執照;
 lighten ,/v./@取悅;
 lighter ,/adj./更@輕;,/n./@打火機;,/n./@駁船;,/v./@駁運;
 linkage ,/n./@連接;
+liquefy ,/vt./@液化;,/vi./@液化;
 lissome ,/adj./@柔軟的;,/adj./@敏捷的;
 literal ,/adj./@文字的;,/adj./@無誇張的;
 lobster ,/n./@龍蝦;
@@ -1099,6 +1100,7 @@ species ,/n./@種類;
 spectre ,/n./@幽靈;
 spittle ,/n./@唾沫;
 sponsor ,/n./@贊助;,/n./@贊助者;
+spousal ,/adj./@配偶的;,/adj./@与配偶有关的;
 squalid ,/adj./@骯髒的;,/adj./@汙穢的;,/adj./@卑劣的;
 squeeze ,/v./@擠榨;
 stagger ,/v./@蹣跚;
@@ -1236,8 +1238,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vatican ,/n./@梵蒂岡;
+Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
