--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -585,6 +585,7 @@ lavatory ,/n./@盥洗室;,/n./@廁所;
 lavender ,/n./@薰衣草;
 lengthen ,/v./@变长;
 leverage ,/n./@手段;,/n./@影响力;
+lifelong ,/adj./@终身的;,/adj./@终生的;
 likeness ,/n./@相像;,/n./@類似;
 likewise ,/adv./@同樣;,/adv./@照樣;
 linchpin ,/n./@关键;,/n./@制轮楔;,/n./@轮辖;
