--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -676,7 +676,7 @@ pulsation ,/n./@脈動;,/v./@搏動;,/v./@悸動;,/v./@振動;
 pulverize ,/vt./@弄碎;,/vt./@击败;
 punctuate ,/v./@加標點;,/v./@不時打斷;
 pupillary ,/adj./@瞳孔的;,/adj./@学生的;,/adj./@被监护人的;
-purgatory ,/n./@炼狱;
+purgatory ,/n./@炼狱;,/n./@折磨;
 quadruple ,/adj./@四倍的;,/adj./@四重的;
 qualified ,/adj./@有资格的;
 quarterly ,/n./@季刊;
