--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -445,6 +445,7 @@ entire
 entity
 enzyme
 equate
+equine
 equity
 eraser
 erotic
@@ -991,6 +992,7 @@ raisin
 ramble
 random
 ranger
+raptor
 rarely
 rascal
 rather
