--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -683,6 +683,7 @@ license
 lighten
 lighter
 linkage
+liquefy
 lissome
 literal
 lobster
@@ -1099,6 +1100,7 @@ species
 spectre
 spittle
 sponsor
+spousal
 squalid
 squeeze
 stagger
@@ -1236,8 +1238,8 @@ vampire
 variety
 various
 varsity
-Vatican
 vatican
+Vatican
 vehicle
 ventage
 venture
