--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -79,6 +79,7 @@ autonomous ,/adj./@自主的;,/adj./@自治的;
 background ,/n./@背景;,/n./@經歷;
 basketball ,/n./@篮球;
 battleship ,/n./@战舰;,/n./@战列舰;
+beforehand ,/adv./@提前;,/adv./@事先;
 beneficial ,/adj./@有益的;
 benevolent ,/adj./@仁慈的;,/adj./@樂善好施的;
 biological ,/adj./@生物学的;
@@ -295,6 +296,7 @@ generation ,/n./@一代;
 girlfriend ,/n./@女朋友;
 glamourous ,/adj./@迷人的;,/adj./@有魅力的;
 government ,/n./@政府;,/n./@政體;,/n./@管轄;
+gramophone ,/n./@留声机;,/n./@唱机;
 guillotine ,/n./@斷頭台;
 gymnastics ,/n./@體操;
 handicraft ,/n./@手工艺品;
@@ -371,6 +373,7 @@ laboratory ,/n./@實驗室;
 leadership ,/n./@領導;
 legitimate ,/adj./@合法的;
 lengendary ,/adj./@传奇般的;
+lieutenant ,/n./@中尉;,/n./@陆军中尉;,/n./@海军上尉;
 likelihood ,/n./@可能;,/n./@相似性;
 linguistic ,/adj./@語言的;,/adj./@語言學的;
 loneliness ,/n./@寂寞;
@@ -379,7 +382,9 @@ magistrate ,/n./@地方执法官;
 mainstream ,/n./@主流;
 malevolent ,/adj./@惡毒的;,/adj./@有惡意的;
 manipulate ,/v./@操纵;,/v./@操作;,/v./@摆布;
+manuscript ,/n./@手稿;,/n./@手抄本;
 masquerade ,/n./@化妆;,/n./@伪装;,/n./@化妆舞会;
+masturbate ,/vi./@手淫;
 meaningful ,/adj./@有意义的;
 mechanical ,/adj./@机械的;
 meditation ,/n./@冥想;
@@ -447,6 +452,7 @@ persuasion ,/n./@说服;
 phenomenal ,/adj./@显著的;,/adj./@現象的;,/adj./@非凡的;
 phenomenon ,/n./@現象;,/n./@非凡的人;
 philosophy ,/n./@哲学;
+phonograph ,/n./@留声机;,/n./@唱机;
 plantation ,/n./@種植園;
 playwright ,/n./@剧作家;
 polychrome ,/n./@多彩;,/adj./@多彩的;,/adj./@多色的;
@@ -597,6 +603,7 @@ unreliable ,/adj./@不可靠的;
 unsatiable ,/adj./@不知足的;,/adj./@貪得無厭的;
 untethered ,/adj./@不受限的;
 unwinnable ,/adj./@不可取胜的;
+unyielding ,/adj./@坚固的;,/adj./@不弯曲的;,/adj./@死板的;,/adj./@不屈从的;
 upbringing ,/n./@养育;
 validation ,/n./@確認;,/n./@批准;,/n./@生效;
 ventilator ,/n./@呼吸机;,/n./@通风设备;,/n./@通风口;
