--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -30,6 +30,7 @@ bellybutton ,/n./@肚脐;
 benediction ,/n./@祝福;
 blockbuster ,/n./@轰动;,/n./@一鸣惊人者;
 blogosphere ,/n./@博客圈;
+bourgeoisie ,/n./@中产阶级;
 braggadocio ,/n./@自夸;,/n./@吹牛;
 bureaucracy ,/n./@官僚主義;
 calculation ,/n./@计算;
@@ -37,6 +38,8 @@ carnivorous ,/adj./@食肉的;
 celebration ,/n./@庆祝;
 certificate ,/n./@证书;,/vt./以证书@授权;,/vt./以证书@批准;
 charismatic ,/adj./@吸引人的;,/adj./@蒙受神恩的;,/adj./@有魅力的;
+chlorophyll ,/n./@葉綠素;
+chloroplast ,/n./@葉綠體;
 cholesterol ,/n./@胆固醇;
 clandestine ,/adj./@隱藏的;,/adj./@秘密的;
 coincidence ,/n./@巧合;
@@ -111,6 +114,7 @@ Deutschland ,/n./@德国;
 development ,/n./@发展;,/n./@开发;
 dilapidated ,/adj./@荒废的;,/adj./@破败的;
 disapproval ,/n./@不批准;,/n./@不同意;
+disposition ,/n./@性情;,/n./@性格;,/n./@倾向;,/n./@意向;,/n./@兴趣;,/n./@布置;,/n./@部署;
 dissipation ,/n./@损耗;,/n./@浪费;,/n./@消散;
 distinction ,/n./@优秀;,/n./@差别;
 distinctive ,/adj./@与众不同的;
@@ -144,6 +148,7 @@ extravagant ,/adj./@奢侈的;
 fabrication ,/n./@製作;,/n./@虛構;
 fascinating ,/adj./@迷人的;
 feasibility ,/n./@可行性;
+fingerprint ,/n./@指纹;
 flabbergast ,/v./@啞然失色;,/v./@大吃一驚;
 flexibility ,/n./@灵活性;
 foolishness ,/n./@愚蠢;
@@ -292,8 +297,8 @@ regurgitate ,/v./@回流;,/v./@反芻;,/v./@反胃;
 reluctantly ,/adj./@不情愿的;
 remembrance ,/n./@記憶;,/n./@紀念;,/n./@記性;
 reminiscent ,/adj./@追忆往事的;,/adj./@怀旧的;
-renaissance ,/n./@复活;,/n./@再生;
 Renaissance ,/n./@文艺复兴;
+renaissance ,/n./@复活;,/n./@再生;
 replacement ,/n./@代替;
 requirement ,/n./@要求;,/n./@需要;
 resemblance ,/n./@相似;
