--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -9,6 +9,7 @@ advantageous ,/adj./@有利的;
 adventitious ,/adj./@外來的;,/adj./@後天的;
 agricultural ,/adj./@农业的;
 alphabetical ,/adj./@字母的;,/adj./@字母表的;,/adj./@按字母順序的;
+ambidextrous ,/adj./@两手都善用的;
 annihilation ,/n./@殲滅;
 announcement ,/n./@宣布;
 antediluvian ,/adj./@古老的;
@@ -122,11 +123,13 @@ kindergarten ,/n./@幼兒園;
 magnificence ,/n./@壯麗;,/n./@宏偉;
 manipulation ,/n./@操纵;
 manufacturer ,/n./@制造者;
+masturbation ,/n./@手淫;
 mechanically ,/adv./@机械的;
 metaphysical ,/adj./@形而上学的;,/adj./@超自然的;,/adj./@玄学的;,/adj./@抽象的;
 metropolitan ,/n./@大都市;
 misquotation ,/n./@误引;
 modification ,/n./@修正;
+narcissistic ,/adj./@孤芳自赏的;
 nevertheless ,/conj./@尽管如此;
 notification ,/n./@通知;
 organisation ,/n./@组织;
