--- a/Files/lang/ch/chinese16.csv
+++ b/Files/lang/ch/chinese16.csv
@@ -1,4 +1,5 @@
 compartmentalize ,/v./@划分;
 disproportionate ,/adj./@不成比例的;
 entrepreneurship ,/n./@創業精神;
+immunodeficiency ,/n./@免疫缺陷;
 unconventionally ,/adj./@不按惯例地;
