--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -238,6 +238,7 @@ pee ,/v./@撒尿;
 pen ,/n./@鋼筆;
 per ,/prep./@每;,/prep./@由;,/prep./@按照;
 pet ,/n./@寵物;
+pew ,/n./@教堂长椅;,/n./@教堂包厢;
 pie ,/n./@餡餅;,/n./@派;
 pig ,/n./@豬;
 pin ,/n./@別針;
