--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -262,6 +262,7 @@ could ,/aux./<can的過去式>@能;
 count ,/v./@數;,/v.//n./@計算;
 court ,/n./@法庭;
 cover ,/n./@封面;,/v./@覆蓋;
+covet ,/vt./@贪求;
 cower ,/v./@退縮;,/v./@膽怯;,/v./@畏縮;
 crack ,/n./@裂縫;,/v./@破裂;,/vi./@爆裂;
 craft ,/n./@工藝;,/n./@手藝;
@@ -561,6 +562,7 @@ hover ,/v./@盤旋;,/v./@翺翔;,/v./@徘徊;
 human ,/n./@人類;,/adj./@人類的;
 humid ,/adj./@湿的;,/adj./@潮濕的;
 humor ,/redirected./@target="humour";
+hunky ,/adj./@结实性感的;
 hurry ,/n./@匆忙;,/v./@趕緊;
 ideal ,/adj./@理想的;
 idiom ,/n./@成語;,/n./@習語;
@@ -675,6 +677,7 @@ midst ,/n./@中間;
 might ,/aux./@可能;,/n./@勢力;,/n./@威力;
 mimic ,/v./@模仿;,/adj./@模仿的;
 mince ,/v./@切碎;
+minor ,/adj./@较小的;,/adj./@次要的;,/adj./@轻微的;,/adj./@小调的;,/vi./@辅修;,/n./@辅修科目;
 minus ,/v./@減;,/n./@符號;,/adj./@負的;
 mirth ,/n./@歡笑;,/n./@歡樂;
 miser ,/n./@守財奴;,/n./@吝嗇鬼;
@@ -841,6 +844,7 @@ quick ,/adj./@快的;
 quiet ,/adj./@安靜;
 quilt ,/n./@被子;
 quite ,/adv./@相當;
+quoit ,/n./@套圈;
 quota ,/n./@定額;,/n./@配額;
 quote ,/v./@引用;
 rabid ,/adj./@激烈的;,/adj./@狂暴的;,/adj./@偏激的;
