--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -3,6 +3,7 @@ abject ,/adj./@卑鄙的;,/adj./@可憐的;,/adj./@不幸的;
 abjure ,/v./@發誓放棄;,/v./@抵制;
 ablush ,/adj./@臉紅的;
 aboard ,/adj./@在船上;,/adj./@在車上;,/adj./@上船;,/adj./@上飛機;
+abroad ,/adv./@在国外;,/adv./@到国外;,/adv./@在流传中;
 abrupt ,/adj./@突然;
 absent ,/adj./@缺席的;,/adj./@缺少的;
 absorb ,/v./@吸收;,/v./@理解;
@@ -74,6 +75,7 @@ around ,/v./@周圍;
 arouse ,/v./@喚醒;,/v./@喚起;,/v./@激發;,/v./@引起;,/v./@鼓勵;
 arrear ,/n./@欠款;
 arrest ,/v./@逮捕;
+arrive ,/vi./@到达;,/vi./@达成;,/vi./@来临;,/vi./@得出;,/vi./@到场;
 artist ,/n./@藝術家;
 ascend ,/v./@上升;,/v./@攀升;
 ascent ,/n./@上升;
@@ -196,12 +198,13 @@ butter ,/n./@黃油;
 button ,/n./@按鈕;,/n./@紐扣;
 bypass ,/v./@繞開;,/v./@忽視;
 cackle ,/v./@饒舌;,/v./@喋喋不休;
+caliph ,/n./@哈里发@(穆斯林国家的统治者);
 camera ,/n./@照相機;
 campus ,/n./@校園;
 Canada ,/n./@加拿大;
 cancel ,/v./@取消;
-Cancer ,/n./@巨蟹座;
 cancer ,/n./@癌症;
+Cancer ,/n./@巨蟹座;
 candid ,/adj./@坦白的;,/adj./@直率的;
 cannon ,/n./@大炮;,/n./@加農炮;
 cannot ,/v./@不能;
@@ -355,6 +358,7 @@ delete ,/v./@刪除;
 deluge ,/n./@洪水;,/n./@汎濫;,/n./@暴雨;
 demand ,/v./@命令;
 dement ,/adj./@癡呆的;,/n./@癡呆;
+demure ,/adj./@端庄的;,/adj./@娴静的;,/adj./@矜持的;,/adj./@庄重的;
 denote ,/v./@表示;
 depart ,/v./@離開;,/v./@出发;
 depend ,/v./@依靠;
@@ -375,6 +379,7 @@ detour ,/vi./@绕行;,/vi./@绕道;,/n./@绕行;,/n./@绕道;
 device ,/n./@設備;
 devote ,/v./@奉獻;
 devout ,/adj./@虔誠的;,/adj./@衷心的;
+dexter ,/adj./@右侧的;
 dialog ,/redirected./@target="dialogue";
 diaper ,/n./@尿布;
 diesel ,/n./@柴油機;
@@ -408,6 +413,7 @@ dreary ,/adj./@沉悶的;,/adj./@沉鬱的;,/adj./@凄涼的;,/adj./@枯燥的;,
 driver ,/n./@司機;
 duress ,/v./@強迫;,/v./@監禁;
 during ,/v./@在@(...)期間;
+dynamo ,/n./@发电机;
 easier ,/adj./@更容易;
 easily ,/adv./@容易地;
 editor ,/n./@編輯;,/n./@編者;
@@ -512,6 +518,7 @@ fizzle ,/n./@失敗;,/v./@萎靡;
 flabby ,/adj./@鬆弛的;,/adj./@軟弱的;
 flappy ,/adj./@飛揚的;
 flatly ,/adv./@斷然的;
+flaunt ,/vt./@炫耀;
 flavor ,/n./@滋味;,/n./@風趣;
 fledge ,/n./@羽毛;,/v./@長羽毛;
 fleece ,/n./@羊毛;,/vt./@欺诈;
@@ -607,6 +614,7 @@ health ,/n./@健康;
 hearth ,/n./@壁爐;,/n./@爐邊;
 heaven ,/n./@天堂;,/n./@天空;
 heckle ,/v./@詰問;
+hectic ,/adj./@忙乱的;
 height ,/n./@髙;,/n./@髙度;
 helium ,/n./@氦;
 herald ,/n./@先驅;,/n./@先兆;,/vt./@宣告;
@@ -1128,6 +1136,7 @@ sedate ,/adj./@安靜的;
 seduce ,/v./@誘惑;,/vt./@引诱;,/vt./@诱奸;
 seemly ,/adj./@適當的;
 seesaw ,/n./@蹺蹺板;
+seethe ,/vi./@发怒;,/vi./@翻腾;,/vi./@充满;
 seldom ,/adv./@不常;,/adv./@難得;
 select ,/v./@挑選;,/v./@选择;
 semper ,/adv./@永遠;
@@ -1276,6 +1285,7 @@ survey ,/v./@調查;
 swanky ,/adj./@炫耀的;
 swathe ,/n./@帶子;,/v./@綁;
 switch ,/v./@轉變;
+sylvan ,/adj./@森林的;,/adj./@田园的;
 symbol ,/n./@符號;,/n./@象徵;
 syntax ,/n./@語法;,/n./@句法;
 system ,/n./@係統;,/n./@體制;,/n./@制度;
@@ -1435,6 +1445,7 @@ wisely ,/adj./@明智的;
 wither ,/v./@枯萎;
 within ,/prep./@在@...中;
 wizard ,/n./@巫師;
+woeful ,/adj./@悲伤的;,/adj./@悲惨的;,/adj./@严重的;,/adj./@可悲的;
 wonder ,/v./@好奇;
 worker ,/n./@工人;,/n./@員工;
 writer ,/n./@作者;,/n./@作家;
