--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -153,6 +153,7 @@ capstone ,/n./@顶石;,/n./@压顶石;
 carapace ,/n./@殼;,/n./@甲殼;
 cardinal ,/adj./@主要的;,/adj./@鲜红色的;,/n./@红衣主教;
 careless ,/adj./@马虎的;,/adj./@疏忽的;
+carnival ,/n./@狂歡節;,/n./@嘉年華會;
 carousel ,/n./@旋转木马;
 carriage ,/n./@运输;,/n./@四轮马车;
 cashmere ,/n./@羊絨;
@@ -365,6 +366,7 @@ emigrate ,/v./@移居;
 eminence ,/n./@显赫;,/n./@卓越;
 emission ,/n./@射出;
 emphasis ,/n./@重点;
+emphatic ,/adj./@明确的;,/adj./@坚决的;,/adj./@坚定的;,/adj./@明显的;,/adj./@重读的;,/adj./@断然的;
 employee ,/n./@雇员;
 employer ,/n./@雇主;
 endeavor ,/v./@努力;
@@ -637,6 +639,7 @@ minutiae ,/n./@小細節;,/n./@小事;
 misalign ,/n.//v./@不重合;,/n./@对偏;,/n./@位移;
 mischief ,/n./@惡作劇;
 mismatch ,/v./@错配;
+misnomer ,/n./@不当用词;,/n./@用词不当;,/n./@用词不妥;
 misorder ,/n./@混乱;
 misquote ,/v./@误引;
 mistreat ,/v./@虐待;
@@ -660,6 +663,7 @@ movement ,/n./@运动;
 multiple ,/adj./@多样的;
 multiply ,/v./@相乘;,/v./@相加;
 murderer ,/n./@谋杀者;
+muscular ,/adj./@肌肉的;,/adj./@肌肉发达的;
 musician ,/n./@音乐家;
 mustache ,/n./@胡子;,/n./@髭;
 mutilate ,/v./@切斷;,/v./@毀傷;,/v./@殘害;
@@ -737,6 +741,7 @@ parallax ,/n./@视差;
 parallel ,/adj./@平行的;
 paralyze ,/v./@使瘫痪;
 paramour ,/n./@情人;,/n./@情婦;,/n./@情伕;
+paranoia ,/n./@妄想症;
 parasite ,/n./@寄生虫;,/n./@寄生生物;
 particle ,/n./@颗粒;
 passerby ,/n./@路人;
@@ -821,6 +826,7 @@ raincoat ,/n./@雨衣;
 rainfall ,/n./@下雨;,/n./@降雨;,/n./@降雨量;
 rational ,/adj./@合理的;
 rearward ,/adv./@向後;,/adj./@向後的;
+rebuttal ,/n./@反驳;,/n./@反证;
 recently ,/adv./@近来;
 recharge ,/v./@充值;,/v./@充电;
 reckless ,/adj./@魯莽的;
