--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -141,6 +141,7 @@ catalogue ,/n./@目錄;
 catatonic ,/adj./@緊張性精神癥的;
 celebrate ,/v./@庆祝;
 celebrity ,/n./@名人;
+celestial ,/adj./@天国的;,/adj./@天空的;,/adj./@天体的;,/adj./@精妙的;
 cellulose ,/n./@纖維素;
 certainly ,/adv./@当然;
 certainty ,/n./@必然;
@@ -193,6 +194,7 @@ connotate ,/v./@暗示;
 conscious ,/adj./@清醒的;
 conscript ,/n./@應徵士兵;,/adj./@被徵召的;,/v./@徵召;
 consensus ,/n./@一致;,/n./@舆论;,/n./@合意;
+consonant ,/n./@辅音;,/n./@辅音字母;
 construct ,/v./@建筑;
 consulate ,/n./@領事館;
 contender ,/n./@竞争者;,/n./@争夺者;
@@ -256,6 +258,7 @@ deterrent ,/adj./@威慑的;,/n./@威慑;
 detonator ,/n./@雷管;,/n./@炸藥;,/n./@導火索;
 devastate ,/v./@毀滅;,/v./@毀壞;
 developer ,/n./@开发者;
+dexterity ,/n./@灵巧;,/n./@机敏;,/n./@敏捷;
 diagnosis ,/n./@診斷;
 diagramma ,/n./@图解;
 dichotomy ,/n./@二分;,/n./@二分法;,/n./@分裂;,/n./@双歧;
@@ -263,6 +266,7 @@ dictation ,/n./@口授;,/n./@聽寫;
 different ,/adj./@不同的;
 difficult ,/adj./@困难的;
 digestion ,/n./@消化;,/n./@领悟;
+dignified ,/adj./@尊贵的;,/adj./@庄重的;
 diligence ,/n./@勤奮;,/n./@勤勉;
 dimension ,/n./@维度;,/n./@次元;
 diplomacy ,/n./@外交;
@@ -523,6 +527,7 @@ magnitude ,/n./@宏大;,/n./@重要;,/n./@量級;,/n./@大小;,/n./@震級;
 malicious ,/adj./@惡意的;
 manifesto ,/n./@宣言;
 mannequin ,/n./@人体模型;
+manoeuvre ,/n./@机动动作;,/n./@策略;,/vt./@熟练地移动;,/vt./@操纵;,/vt./@施展策略;,/n./@演习;
 margarine ,/n./@人造黃油;,/n./@人造奶油;
 marijuana ,/n./@大麻;
 marvelous ,/adj./@了不起的;,/adj./@非凡的;,/adj./@令人惊异的;,/adj./@不平常的;
@@ -643,6 +648,7 @@ practical ,/adj./@實際的;
 pragmatic ,/adj./@實際的;,/adj./@實用主義的;
 precedent ,/adj./@前面的;,/n./@先例;
 preceding ,/adj./@在前的;
+precipice ,/n./@悬崖;,/n./@险境;
 precision ,/n./@精确;
 precursor ,/n./@前驅;,/n./@前身;,/n./@前兆;,/n./@前體;,/n./@先兆;
 predicate ,/v./@断言;,/v./@断定;,/n./@谓语;,/n./@述语;,/adj./@谓语的;
@@ -817,6 +823,7 @@ therefore ,/conj.//adv./@因此;
 thesaurus ,/n./@寶庫;,/n./@同義詞詞典;,/n./@類屬詞典;,/n./@主題詞表;
 thickness ,/n./@厚;,/n./@厚度;,/n./@濃;
 threshold ,/n./@门槛;
+thumbnail ,/n./@拇指甲;,/n./@缩略图;,/n./@略图;,/n./@短文;
 tolerance ,/n./@容忍度;
 tombstone ,/n./@墓碑;
 toothache ,/n./@牙痛;
