--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -30,6 +30,7 @@ bellybutton
 benediction
 blockbuster
 blogosphere
+bourgeoisie
 braggadocio
 bureaucracy
 calculation
@@ -37,6 +38,8 @@ carnivorous
 celebration
 certificate
 charismatic
+chlorophyll
+chloroplast
 cholesterol
 clandestine
 coincidence
@@ -111,6 +114,7 @@ Deutschland
 development
 dilapidated
 disapproval
+disposition
 dissipation
 distinction
 distinctive
@@ -144,6 +148,7 @@ extravagant
 fabrication
 fascinating
 feasibility
+fingerprint
 flabbergast
 flexibility
 foolishness
@@ -292,8 +297,8 @@ regurgitate
 reluctantly
 remembrance
 reminiscent
-renaissance
 Renaissance
+renaissance
 replacement
 requirement
 resemblance
