--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -9,6 +9,7 @@ advantageous
 adventitious
 agricultural
 alphabetical
+ambidextrous
 annihilation
 announcement
 antediluvian
@@ -122,11 +123,13 @@ kindergarten
 magnificence
 manipulation
 manufacturer
+masturbation
 mechanically
 metaphysical
 metropolitan
 misquotation
 modification
+narcissistic
 nevertheless
 notification
 organisation
