--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -262,6 +262,7 @@ could
 count
 court
 cover
+covet
 cower
 crack
 craft
@@ -561,6 +562,7 @@ hover
 human
 humid
 humor
+hunky
 hurry
 ideal
 idiom
@@ -675,6 +677,7 @@ midst
 might
 mimic
 mince
+minor
 minus
 mirth
 miser
@@ -841,6 +844,7 @@ quick
 quiet
 quilt
 quite
+quoit
 quota
 quote
 rabid
