--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -3,6 +3,7 @@ abject
 abjure
 ablush
 aboard
+abroad
 abrupt
 absent
 absorb
@@ -74,6 +75,7 @@ around
 arouse
 arrear
 arrest
+arrive
 artist
 ascend
 ascent
@@ -196,12 +198,13 @@ butter
 button
 bypass
 cackle
+caliph
 camera
 campus
 Canada
 cancel
-Cancer
 cancer
+Cancer
 candid
 cannon
 cannot
@@ -355,6 +358,7 @@ delete
 deluge
 demand
 dement
+demure
 denote
 depart
 depend
@@ -375,6 +379,7 @@ detour
 device
 devote
 devout
+dexter
 dialog
 diaper
 diesel
@@ -408,6 +413,7 @@ dreary
 driver
 duress
 during
+dynamo
 easier
 easily
 editor
@@ -512,6 +518,7 @@ fizzle
 flabby
 flappy
 flatly
+flaunt
 flavor
 fledge
 fleece
@@ -607,6 +614,7 @@ health
 hearth
 heaven
 heckle
+hectic
 height
 helium
 herald
@@ -1128,6 +1136,7 @@ sedate
 seduce
 seemly
 seesaw
+seethe
 seldom
 select
 semper
@@ -1276,6 +1285,7 @@ survey
 swanky
 swathe
 switch
+sylvan
 symbol
 syntax
 system
@@ -1435,6 +1445,7 @@ wisely
 wither
 within
 wizard
+woeful
 wonder
 worker
 writer
