--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -608,6 +608,7 @@ illicit
 imagine
 imitate
 immerse
+immoral
 impeach
 implore
 impress
@@ -653,6 +654,7 @@ jittery
 jointly
 journal
 journey
+Jupiter
 justify
 ketchup
 kidding
@@ -1216,6 +1218,7 @@ typical
 Ukraine
 undergo
 unequal
+unhinge
 uniform
 unknown
 unleash
@@ -1238,8 +1241,8 @@ vampire
 variety
 various
 varsity
-vatican
 Vatican
+vatican
 vehicle
 ventage
 venture
