--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -153,6 +153,7 @@ capstone
 carapace
 cardinal
 careless
+carnival
 carousel
 carriage
 cashmere
@@ -365,6 +366,7 @@ emigrate
 eminence
 emission
 emphasis
+emphatic
 employee
 employer
 endeavor
@@ -637,6 +639,7 @@ minutiae
 misalign
 mischief
 mismatch
+misnomer
 misorder
 misquote
 mistreat
@@ -660,6 +663,7 @@ movement
 multiple
 multiply
 murderer
+muscular
 musician
 mustache
 mutilate
@@ -737,6 +741,7 @@ parallax
 parallel
 paralyze
 paramour
+paranoia
 parasite
 particle
 passerby
@@ -821,6 +826,7 @@ raincoat
 rainfall
 rational
 rearward
+rebuttal
 recently
 recharge
 reckless
