--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -141,6 +141,7 @@ catalogue
 catatonic
 celebrate
 celebrity
+celestial
 cellulose
 certainly
 certainty
@@ -193,6 +194,7 @@ connotate
 conscious
 conscript
 consensus
+consonant
 construct
 consulate
 contender
@@ -256,6 +258,7 @@ deterrent
 detonator
 devastate
 developer
+dexterity
 diagnosis
 diagramma
 dichotomy
@@ -263,6 +266,7 @@ dictation
 different
 difficult
 digestion
+dignified
 diligence
 dimension
 diplomacy
@@ -523,6 +527,7 @@ magnitude
 malicious
 manifesto
 mannequin
+manoeuvre
 margarine
 marijuana
 marvelous
@@ -643,6 +648,7 @@ practical
 pragmatic
 precedent
 preceding
+precipice
 precision
 precursor
 predicate
@@ -817,6 +823,7 @@ therefore
 thesaurus
 thickness
 threshold
+thumbnail
 tolerance
 tombstone
 toothache
