--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -122,6 +122,7 @@ cede ,/v./@放棄;,/v./@割讓;
 ceil ,/v./@向上取整;
 cent ,/n./@分幣;
 chao ,/n./@混亂;
+chat ,/n./@聊天;,/vi./@聊天;
 chew ,/v./@咀嚼;,/n./@咀嚼;
 chic ,/n./@時髦;
 chip ,/n./@薯片;,/n./@碎片;,/n./@缺口;
@@ -1018,6 +1019,7 @@ vend ,/v./@出售;,/v./@售賣;
 verb ,/n./@動詞;
 very ,/adv./@非常;
 veto ,/n./@否決;
+vibe ,/n./@氛围;,/n./@感觉;
 vice ,/n./@惡習;,/n./@缺點;,/adj./@副的;
 view ,/n./@視野;,/n./@觀點;,/n./@見解;,/n./@景色;,/v./@查看;
 vine ,/n./@藤;,/n./@葡萄樹;
