--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -608,6 +608,7 @@ illicit ,/adj./@違法的;,/adj./@不正當的;
 imagine ,/v./@想象;
 imitate ,/v./@模仿;
 immerse ,/v./@沉浸于;,/vt./@浸泡;
+immoral ,/adj./@不道德的;,/adj./@堕落的;
 impeach ,/v./@彈劾;,/v.//n./@控告;,/v.//n./@檢舉;,/v.//n./@懷疑;
 implore ,/v./@哀求;,/v./@懇求;
 impress ,/v./@銘記;
@@ -653,6 +654,7 @@ jittery ,/adj./@神经过敏的;,/adj./@战战兢兢的;,/adj./@紧张不安的;
 jointly ,/adv./@共同地;
 journal ,/n./@期刊;,/n./@日誌;
 journey ,/n./@旅行;
+Jupiter ,/n./@木星;
 justify ,/v./@證明;
 ketchup ,/n./@蕃茄醬;
 kidding ,/n./@開玩笑;
@@ -1216,6 +1218,7 @@ typical ,/adj./@典型的;
 Ukraine ,/n./@烏克蘭;
 undergo ,/v./@經歷;,/v./@經受;
 unequal ,/n./@不平等的;
+unhinge ,/v./@(使)精神错乱;,/v./@(使)精神失常;
 uniform ,/n./@制服;,/adj./@全部相同的;
 unknown ,/adj./@未知的;,/adj./@陌生的;,/n./@未知;,/n./@未知物;,/n./@未知數;
 unleash ,/v./@解放;
@@ -1238,8 +1241,8 @@ vampire ,/n./@吸血鬼;
 variety ,/n./@多樣;
 various ,/adj./@各種各樣的;
 varsity ,/n./@大學;,/adj./@大學代表隊的;
-vatican ,/n./@梵蒂岡;
 Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
+vatican ,/n./@梵蒂岡;
 vehicle ,/n./@車輛;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
