--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -79,6 +79,7 @@ autonomous
 background
 basketball
 battleship
+beforehand
 beneficial
 benevolent
 biological
@@ -295,6 +296,7 @@ generation
 girlfriend
 glamourous
 government
+gramophone
 guillotine
 gymnastics
 handicraft
@@ -371,6 +373,7 @@ laboratory
 leadership
 legitimate
 lengendary
+lieutenant
 likelihood
 linguistic
 loneliness
@@ -379,7 +382,9 @@ magistrate
 mainstream
 malevolent
 manipulate
+manuscript
 masquerade
+masturbate
 meaningful
 mechanical
 meditation
@@ -447,6 +452,7 @@ persuasion
 phenomenal
 phenomenon
 philosophy
+phonograph
 plantation
 playwright
 polychrome
@@ -597,6 +603,7 @@ unreliable
 unsatiable
 untethered
 unwinnable
+unyielding
 upbringing
 validation
 ventilator
